<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/views1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/Monday"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/monday"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/Cloudy"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:src="@drawable/cloudy_1"/>
                <TextView
                    android:id="@+id/PartlyCloudy"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/cloud"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/views2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/Tuesday"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/tuesday"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ImageRain"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:src="@drawable/rain"/>
                <TextView
                    android:id="@+id/Rain"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Rain"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/views3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/Wednesday"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/wednesday"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ImageSnow"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/snow"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/Snow"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Snow"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/views4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/Thursday"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/thursday"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ImageThunderstorm"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/thunderstorm"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/Thunderstorm"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Thunderstorm"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/views5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/Friday"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/friday"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ImageCloud"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/cloud"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/cloud"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Cloud"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/views6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Saturday"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/saturday"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ImageCloud1"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/cloudy_1"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/cloud1"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/cloud"
                    android:gravity="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/sunday"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/thunderstorm"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Thunderstorm"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Monday"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/rain"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Rain"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Tuesday"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/snow"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Snow"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Wednesday"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/cloudy_1"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Partly Cloudy"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>